--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.1",
+    "sass": "^1.56.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
