trabajando en reutilizacion de formulario

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
+VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
