--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
+VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
