--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development vite",
+    "dev": "cross-env NODE_ENV=development vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "build-dev": "vue-tsc && vite build --mode development"
@@ -26,6 +26,7 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.2.0",
+    "cross-env": "^7.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
