--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.23",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
