--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-dev": "vue-tsc && vite build --mode development"
   },
   "dependencies": {
+    "@vueuse/core": "^9.7.0",
     "axios": "^1.1.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
