--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite",
+    "dev": "cross-env NODE_ENV=development vite --host",
     "build": "vue-tsc && vite build --mode production",
     "preview": "vite preview",
     "build-dev": "vue-tsc && vite build --mode development"
