--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.18.1",
+    "rxjs": "^7.8.0",
     "sass": "^1.56.0",
     "vue": "^3.2.41",
     "vue-i18n": "^9.2.2",
