[WIP] Implementing firebase env variables

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,11 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-ue.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://noba-web-banking-s5lnjmumrq-ue.a.run.app/"
+FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
+FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
+FIREBASE_DATABASE_URL="https://noba-dev-360623-default-rtdb.firebaseio.com"
+FIREBASE_PROJECT_ID="noba-dev-360623"
+FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
+FIREBASE_MESSAGE_SENDER_ID="970990734888"
+FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
+FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
