--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,11 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
+FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
+FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
+FIREBASE_DATABASE_URL="https://noba-dev-360623-default-rtdb.firebaseio.com"
+FIREBASE_PROJECT_ID="noba-dev-360623"
+FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
+FIREBASE_MESSAGE_SENDER_ID="970990734888"
+FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
+FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
