--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "noba-dev-360623",
-    "prod": "noba-prod"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "noba-dev-360623"
+  }
 }
