--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,12 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-ue.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://noba-web-banking-s5lnjmumrq-ue.a.run.app/"
-VITE_FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
-VITE_FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
-VITE_FIREBASE_DATABASE_URL="https://noba-dev-360623-default-rtdb.firebaseio.com"
-VITE_FIREBASE_PROJECT_ID="noba-dev-360623"
-VITE_FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
-VITE_FIREBASE_MESSAGE_SENDER_ID="970990734888"
-VITE_FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
-VITE_FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
+
+VITE_FIREBASE_API_KEY="AIzaSyBl1okrYiI0fojUAjKhQH98X5R-xu0_cZk"
+VITE_FIREBASE_AUTH_DOMAIN="noba-prod.firebaseapp.com"
+VITE_FIREBASE_DATABASE_URL="https://noba-prod-default-rtdb.firebaseio.com"
+VITE_FIREBASE_PROJECT_ID="noba-prod"
+VITE_FIREBASE_STORAGE_BUCKET="noba-prod.appspot.com"
+VITE_FIREBASE_MESSAGE_SENDER_ID="332328895958"
+VITE_FIREBASE_APP_ID="1:332328895958:web:49ab047ab3d70f8c301077"
+VITE_FIREBASE_MEASUREMENT_ID="G-1BDL2D75XT"
