--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-ue.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
-VITE_NOBA_SIGNIN="https://noba-web-banking-s5lnjmumrq-ue.a.run.app/"
+VITE_NOBA_SIGNIN="https://signin.noba.cash/"
 
 VITE_FIREBASE_API_KEY="AIzaSyBl1okrYiI0fojUAjKhQH98X5R-xu0_cZk"
 VITE_FIREBASE_AUTH_DOMAIN="noba-prod.firebaseapp.com"
