[feat] VITE_BASE_ENDPOINT_TWO_FACTOR in dev

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
+VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-atuh-iekdhw627q-uc.a.run.app/api/v1"
+
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
 VITE_FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
