fix: URL endpoint two factor auth.

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-vp.a.run.app/api/v1"
+VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-s5lnjmumrq-uc.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://signin.noba.cash/"
 
