--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-ue.a.run.app/api/v1"
+VITE_BUSINESS_ALLIE_ENDPOINT="http://localhost:4600/api/v1"
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://signin.noba.cash/"
 
