--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
 VITE_BUSINESS_ALLIE_ENDPOINT="http://localhost:4600/api/v1"
+VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
+
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
 FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
