--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-s5lnjmumrq-vp.a.run.app/api/v1"
-VITE_BUSINESS_ALLIE_ENDPOINT="http://localhost:4600/api/v1"
+VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-s5lnjmumrq-uk.a.run.app/api/v1"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-s5lnjmumrq-uc.a.run.app/api/v1"
 
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
