TMP: accountId de pinttosoft en el .env

--- a/.env.production
+++ b/.env.production
@@ -13,3 +13,5 @@ VITE_FIREBASE_STORAGE_BUCKET="noba-prod.appspot.com"
 VITE_FIREBASE_MESSAGE_SENDER_ID="332328895958"
 VITE_FIREBASE_APP_ID="1:332328895958:web:49ab047ab3d70f8c301077"
 VITE_FIREBASE_MEASUREMENT_ID="G-1BDL2D75XT"
+
+VITE_PINTTOSOFT_ACCOUNT="ca0c9b43-a997-4cee-b769-5c659301b237"
