--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,8 @@ VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 VITE_NOBA_SIGNIN="https://noba-register-dev.web.app/"
+VITE_PINTTOSOFT_ACCOUNT="5b60ecc8-02ec-42ad-b001-2f4e6018c228"
+VITE_PINTTOSOFT_EMAIL="empresa@gmail.com"
 
 VITE_FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
 VITE_FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
@@ -13,3 +15,4 @@ VITE_FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
 VITE_FIREBASE_MESSAGE_SENDER_ID="970990734888"
 VITE_FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
 VITE_FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
+
