--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,8 @@ VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-s5lnjmumrq-uc.a.run
 
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://signin.noba.cash/"
+VITE_PINTTOSOFT_ACCOUNT="ca0c9b43-a997-4cee-b769-5c659301b237"
+VITE_PINTTOSOFT_EMAIL="pinttosoft@gmail.com"
 
 VITE_FIREBASE_API_KEY="AIzaSyBl1okrYiI0fojUAjKhQH98X5R-xu0_cZk"
 VITE_FIREBASE_AUTH_DOMAIN="noba-prod.firebaseapp.com"
@@ -13,3 +15,4 @@ VITE_FIREBASE_STORAGE_BUCKET="noba-prod.appspot.com"
 VITE_FIREBASE_MESSAGE_SENDER_ID="332328895958"
 VITE_FIREBASE_APP_ID="1:332328895958:web:49ab047ab3d70f8c301077"
 VITE_FIREBASE_MEASUREMENT_ID="G-1BDL2D75XT"
+
