fix: url dev env.

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-vp.a.run.app/api/v1"
+VITE_BASE_ENDPOINT="https://updgd343ei.execute-api.us-east-1.amazonaws.com/default/api/v1"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run.app/api/v1"
 
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
