--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-vp.a.run.app/api/v1"
+VITE_BASE_ENDPOINT="https://updgd343ei.execute-api.us-east-1.amazonaws.com/default/api/v1"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run.app/api/v1"
 
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
@@ -15,4 +15,3 @@ VITE_FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
 VITE_FIREBASE_MESSAGE_SENDER_ID="970990734888"
 VITE_FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
 VITE_FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
-
