--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 VITE_BASE_ENDPOINT="https://updgd343ei.execute-api.us-east-1.amazonaws.com/default/api/v1"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run.app/api/v1"
+VITE_BASE_NOBA_REGISTER="http://localhost:3000"
 
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
