--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "crypto-js": "^4.1.1",
     "firebase": "^9.16.0",
+    "jose": "^5.2.0",
     "jspdf": "^2.5.1",
     "pinia": "^2.1.7",
     "primeflex": "^3.2.1",
