--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,6 @@
-VITE_BASE_ENDPOINT="https://ltebjllkhf.execute-api.us-east-2.amazonaws.com/default/api/v1"
-VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-s5lnjmumrq-uc.a.run.app/api/v1"
-VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-s5lnjmumrq-uk.a.run.app/api/v1"
-VITE_BASE_NOBA_REGISTER="https://signin.noba.cash/"
+VITE_BASE_ENDPOINT="https://pi5fwd6q93.execute-api.eu-west-2.amazonaws.com/default/api/v1"
+VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
+VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run.app/api/v1"
 
 VITE_PUBLIC_SDK_ID="57b464cf-48f6-4ca7-830f-762fb1da6a8a"
 VITE_NOBA_SIGNIN="https://signin.noba.cash/"
