wip: using new v2 endpoint

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 VITE_BASE_ENDPOINT="https://updgd343ei.execute-api.us-east-1.amazonaws.com/default/api/v1"
+VITE_BASE_ENDPOINT_V2="https://updgd343ei.execute-api.us-east-1.amazonaws.com/default/api/v2"
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-iekdhw627q-uk.a.run.app/api/v1"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-iekdhw627q-uc.a.run.app/api/v1"
 
