--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 VITE_BASE_ENDPOINT="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v1"
+VITE_BASE_ENDPOINT_V2="https://noba-api-web-banking-iekdhw627q-ue.a.run.app/api/v2"
 VITE_BUSINESS_ALLIE_ENDPOINT="http://localhost:4600/api/v1"
 VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
 VITE_PINTTOSOFT_ACCOUNT="5b60ecc8-02ec-42ad-b001-2f4e6018c228"
