--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_BASE_ENDPOINT="https://ltebjllkhf.execute-api.us-east-2.amazonaws.com/default/api/v1"
-VITE_BASE_ENDPOINT="https://ltebjllkhf.execute-api.us-east-2.amazonaws.com/default/api/v2"
+VITE_BASE_ENDPOINT_V2="https://ltebjllkhf.execute-api.us-east-2.amazonaws.com/default/api/v2"
 VITE_BASE_ENDPOINT_TWO_FACTOR="https://tools-two-factor-auth-s5lnjmumrq-uc.a.run.app/api/v1"
 VITE_BUSINESS_ALLIE_ENDPOINT="https://noba-business-allie-s5lnjmumrq-uk.a.run.app/api/v1"
 
