refactor - pass global variable to local so that the state does not get stuck

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_BUSINESS_ALLIE_ENDPOINT="http://localhost:4600/api/v1"
 VITE_NOBA_SIGNIN="https://signin.homol.pinttosoft.com/"
 VITE_PINTTOSOFT_ACCOUNT="5b60ecc8-02ec-42ad-b001-2f4e6018c228"
 VITE_PINTTOSOFT_EMAIL="empresa@gmail.com"
+VITE_TENANT_NAME="belobaba"
 
 VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
