--- a/.env.development
+++ b/.env.development
@@ -9,6 +9,7 @@ VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 VITE_NOBA_SIGNIN="https://noba-register-dev.web.app/"
 VITE_PINTTOSOFT_ACCOUNT="5b60ecc8-02ec-42ad-b001-2f4e6018c228"
 VITE_PINTTOSOFT_EMAIL="empresa@gmail.com"
+VITE_TENANT_NAME="noba"
 
 VITE_FIREBASE_API_KEY="AIzaSyCN4sb1POWZMd-z4aAMpIqyyMIsPzLc-q0"
 VITE_FIREBASE_AUTH_DOMAIN="noba-dev-360623.firebaseapp.com"
@@ -18,4 +19,3 @@ VITE_FIREBASE_STORAGE_BUCKET="noba-dev-360623.appspot.com"
 VITE_FIREBASE_MESSAGE_SENDER_ID="970990734888"
 VITE_FIREBASE_APP_ID="1:970990734888:web:38f2c61e7e9d60c60f2f1d"
 VITE_FIREBASE_MEASUREMENT_ID="G-XZGG16P7C2"
-
