--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,7 @@ VITE_PUBLIC_SDK_ID="5cc43d2a-eea2-42ef-bf1a-52beb75a41f9"
 VITE_NOBA_SIGNIN="https://noba-register-dev.web.app/"
 VITE_PINTTOSOFT_ACCOUNT="5b60ecc8-02ec-42ad-b001-2f4e6018c228"
 VITE_PINTTOSOFT_EMAIL="empresa@gmail.com"
+VITE_TENANT_NAME="belobaba"
 
 VITE_FIREBASE_API_KEY="AIzaSyBl1okrYiI0fojUAjKhQH98X5R-xu0_cZk"
 VITE_FIREBASE_AUTH_DOMAIN="noba-prod.firebaseapp.com"
